# vertical-workspaces

./: CHANGELOG.md  Makefile  README.md  appDisplay.js  appFavorites.js  dash.js  extension.js  iconGrid.js  layout.js  meson.build  messageTray.js  metadata.json  optionsFactory.js  osdWindow.js  overview.js  overviewControls.js  panel.js  prefs.js  recentFilesSearchProvider.js  search.js  settings.js  stylesheet.css  swipeTracker.js  util.js  verticalWorkspaces.js  windowAttentionHandler.js  windowManager.js  windowPreview.js  windowSearchProvider.js  workspace.js  workspaceAnimation.js  workspaceSwitcherPopup.js  workspaceThumbnail.js  workspacesView.js
.github/ISSUE_TEMPLATE/: bug_report.md
lib/: appDisplay.js  appFavorites.js  dash.js  dependencies.js  extensionsSearchProvider.js  iconGrid.js  import.js  layout.js  messageTray.js  optionsFactory.js  osdWindow.js  overlayKey.js  overview.js  overviewBackground.js  overviewControls.js  panel.js  recentFilesSearchProvider.js  search.js  searchController.js  settings.js  swipeTracker.js  util.js  winTmb.js  windowAttentionHandler.js  windowManager.js  windowPreview.js  windowSearchProvider.js  workspace.js  workspaceAnimation.js  workspaceSwitcherPopup.js  workspaceThumbnail.js  workspacesView.js
locale/cs/LC_MESSAGES/: vertical-workspaces.mo
locale/fr/LC_MESSAGES/: vertical-workspaces.mo
po/: LINGUAS  cs.po  fr.po  it.po  meson.build  nl.po  pt_BR.po  vertical-workspaces.pot  zh-CN.mo
schemas/: gschemas.compiled  org.gnome.shell.extensions.vertical-workspaces.gschema.xml
(+2 files in other folders)
